--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,18 @@ services:
       - ./app:/app
     environment:
       - SECRET_KEY=devsecretkey
-    #   - DEBUG=1
-    #   - DB_HOST=db
-    #   - DB_NAME=devdb
-    #   - DB_USER=devuser
-    #   - DB_PASS=changeme
-    # depends_on:
-    #   - db
+      - DEBUG=1
+      - DB_HOST=db
+      - DB_NAME=devdb
+      - DB_USER=devuser
+      - DB_PASS=changeme
+    depends_on:
+      - db
     
-  # db:
-  #   image: postgres:15
-  #   environment: 
-  #     - POSTGRES_DB=devdb
-  #     - POSTGRES_USER=devuser
-  #     - POSTGRES_PASSWORD=changeme
+  db:
+    image: postgres:15
+    
+    environment: 
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=changeme
