--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
       context: .
     command: >
       sh -c "python manage.py wait_for_db &&
-             python manage.py migrate &&
+              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
     volumes:
       - ./app:/app
+      - ./data/web:/vol/web
     environment:
       - SECRET_KEY=devsecretkey
       - DEBUG=1
@@ -23,7 +24,7 @@ services:
       - db
     
   db:
-    image: postgres:15
+    image: postgres:15-alpine
     environment: 
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
